--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 bin/
 *.pair
 classes/
-lib/*.so
-lib/*.lib
-lib/*.exp
-lib/*.dll
+lib/*/*.so
+lib/*/*.lib
+lib/*/*.exp
+lib/*/*.dll
 classes/*
 bin/*
